--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "main": "index.js",
   "author": "Enzo Rodrigues <enzorodrigues272@gmail.com>",
   "license": "MIT",
-  "scripts":{
+  "scripts": {
     "dev": "nodemon src/index.js"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
